@@ -6,6 +6,7 @@ base-installer (1.100) UNRELEASED; urgency=low
   [ Colin Watson ]
   * Merge from Ubuntu:
     - Silently skip non-existent devices in /proc/swaps (LP: #290947).
+    - Write out the resume partition as a UUID if possible.
 
  -- Frans Pop <fjp@debian.org>  Tue, 21 Apr 2009 20:39:42 +0200
 
